[package]
name = "token_vault"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.40"
winapi = {version = "0.3.9", features = ["bcrypt", "winnt", "minwindef", "ntdef", "libloaderapi", "psapi", "securitybaseapi", "tlhelp32", "processthreadsapi","sysinfoapi","synchapi", "handleapi", "winsvc","winbase","errhandlingapi","lmcons","userenv"]}
ntapi = "0.3.4"